fix: right group gap

--- a/packages/starlight-theme-vintage/styles/base.css
+++ b/packages/starlight-theme-vintage/styles/base.css
@@ -94,6 +94,10 @@
     }
   }
 
+  .right-group {
+    gap: 0.75rem;
+  }
+
   .social-icons {
     a {
       color: var(--sl-color-gray-2);
